syntax = "proto3";
enum UserEvent {
    SignInWithEmailPassword = 0;
    SignUp = 1;
    SignOut = 2;
    UpdateUserProfile = 3;
    GetUserProfile = 4;
    InitUser = 6;
    SetAppearanceSetting = 7;
    GetAppearanceSetting = 8;
    GetUserSetting = 9;
}